# Schedule_Project

./: .dockerignore  .env  Dockerfile  README.md  app.py  demo.py  docker-compose.yml  index.html  main.py  package-lock.json  pyproject.toml  requirements.txt  schedule_display.html  test.html  test.py
Front_end/frontend/: style-schedule.css  styles.css
app/: __init__.py  application.py  config.py  demo.py  main.py  model.py  requirements.txt  routes.py
app/api/: list_all_api.py  schedule_api.py  search_api.py
app/config/: database_configuration.py  embedding_model.py
app/constant/: constant_input_test.py  constant_of_schedule.py  constant_variable.py  schedule_of_classes.py
app/mock/: mock_schedules  mock_search
app/mock/docs/: api_documentation.md  uiux_guideline.md
app/model/: Class_Info.py
app/service/: constraints_service.py
css/: style-schedule.css  styles.css
data/: gemini_batch_translate.py  prompt.json
data/input/: Final_Dataset.xlsx  Final_Dataset_VIT5.xlsx  Pre-Input_for_VIT5.xlsx  tkb_ai.xlsx
database/embedding/: embedding_data.py
documents/: Todo-2.1_Handling_Prompts  Todo-2.1_Handling_Prompts.docx
frontend/: text.html
js/: script-schedule.js  script.js
service/: constraints_service.py
src/: App.js
utils/: constant_variable.py
validation/data/: create_data_VIT5.py  create_override_data_VIT5.py  get_room.py  get_subject_and_subtopic_and_teacher.py  get_teacher.py  validate-data-todo1.1.py  validate-data.py  validate_data_Nguyen.py
validation/data/output/: Dataset_Cleaned_Nguyen.xlsx  (+7 more)
validation/utils/: constant.py
