[project]
name = "model-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gensim>=4.3.3",
    "huggingface-hub>=0.30.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyvi>=0.1.1",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
]
